# databus-python-client

./: .gitignore  README.md  docker-compose.yml  test_oep.sh
databusclient/: cli.py  client.py
databusclient/consume/: download.py
services/: README.md  pyproject.toml
services/backend/: pyproject.toml
services/backend/components/rdmo/data/: catalog_01.xml
services/backend/src/: main.py
services/backend/src/controller/: abstract_controller.py
services/backend_regimo/components/rdmo/data/: catalog_01.xml
services/frontend/: .gitignore  package-lock.json  package.json
services/frontend/src/: main.js
services/frontend/src/app/shared/components/: HelloWorld.vue
services/frontend/src/app/shared/components/app-footer/: FooterBar.vue
services/frontend/src/app/shared/components/app-header/: NavigationBar.vue
services/frontend/src/app/shared/components/app-utilities/: ButtonCounter.vue
services/frontend/src/views/: HomeView.vue  RegisterView.vue
tests/: test_download.py
tests/data/: file_0001.json
