[tool.poetry]
name = "backend_regimo"
version = "0.1.0"
description = "This is the backend for Regimo. Regimo is a tool to register data on a databus."
authors = ["Anis Koubaa <mohamed.koubaa@kit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"